Fix slider thumb cropping with inset margin

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,8 @@ input[type="range"] {
   appearance: none;
   background: transparent;
   cursor: pointer;
-  width: 100%;
+  width: calc(100% - 14px);
+  margin: 0 7px;
   touch-action: none;
 }
 
